# cubewalkers

./: .buildinfo  LICENSE  README.md  examples.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  setup.py  setup_legacy.py  test.py  test_cubewalkers.py
.github/workflows/: build_docs.yml  python-package.yml  python3.12_tests.yml  python3.8_tests.yml
Examples and Tutorials/: Basic Usage.ipynb  CANA Example.ipynb  InfluenzaTest.ipynb
_sources/: examples.rst.txt  index.rst.txt
_sources/autoapi/: index.rst.txt
_sources/autoapi/cubewalkers/: index.rst.txt
_static/css/: custom.css
autoapi/: index.html
autoapi/cubewalkers/: index.html
benchmarks/: bench_update_mask_speed.py  simple_comparisons.py
cubewalkers/: Experiment.py  Model.py  __init__.py  _experiment.py  _model.py  conversions.py  custom_typing.py  experiment.py  initial_conditions.py  lookup_tables.py  model.py  parser.py  simulation.py  update_schemes.py
cubewalkers/tests/: __init__.py  test_basic_functions.py  test_basic_simulation.py  test_cana_import.py  test_coherence.py  test_dynamical_impact.py  test_edgetic_control.py  test_initial_conditions.py  test_update_mask.py
docs/source/: conf.py
tests/: __init__.py  test_basic_simulation.py  test_cana_import.py  test_coherence.py  test_dynamical_impact.py  test_edgetic_control.py  test_final_hamming_distance.py  test_initial_conditions.py  test_update_mask.py
tests/can_fail/: __init__.py  test_coherence_cf.py  test_derrida_cf.py  test_dynamical_impact_cf.py
(+19 files in other folders)
