[project]
name = "cubewalkers"
authors = [{ name = "Jordan Rozum", email = "jrozum@binghamton.edu" }]
version = "1.3.6"
description="Python package for simulating Boolean networks on the GPU"
license = { file = "LISENSE" }
requires-python = ">=3.8"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
cana = ["cana"]

[tool.mypy]
mypy_path = ["stubs"]
